<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:gravity="center|center_horizontal"
    >

    <GridLayout
        android:id="@+id/pad"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="3"
        >

        <Button
            android:id="@+id/buttonLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/left"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:tag="4"/>

        <Button
            android:id="@+id/buttonUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/up"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:tag="1"/>

        <Button
            android:id="@+id/buttonDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/down"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:tag="2"/>

        <Button
            android:id="@+id/buttonRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/right"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:tag="8"/>
    </GridLayout>

    <LinearLayout
        android:id="@+id/connection"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_toStartOf="@+id/buttons"
        android:layout_toEndOf="@id/pad"
        android:orientation="vertical">

        <!--<Button
            android:id="@+id/buttonY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:tag="128"
            android:text="@string/y" />-->

        <EditText
            android:id="@+id/clientIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/client_ip_long"
            android:hint="@string/client_ip_short"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/clientID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/client_id_long"
            android:hint="@string/client_id_short"
            android:inputType="text"
            android:singleLine="true"
            />
        <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:onClick="connectToClient"

            />
    </LinearLayout>

    <GridLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="3">

        <Button
            android:id="@+id/buttonY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/y"
            android:tag="128"/>

        <Button
            android:id="@+id/buttonX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/x"
            android:tag="64"/>

        <Button
            android:id="@+id/buttonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/b"
            android:tag="32"/>

        <Button
            android:id="@+id/buttonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/a"
            android:tag="16"/>
    </GridLayout>


</RelativeLayout>